Updated after W3C check

--- a/sophie-collier_assessment01&02/mexico.html
+++ b/sophie-collier_assessment01&02/mexico.html
@@ -27,7 +27,7 @@
 
     <!-- THIS IS THE NAVIGATION  -->
 
-    <section>
+    <div>
       <nav class="top-nav" id="top-nav">
         <ul class="top-nav-list">
           <li class="line-hover-effect"><a href="./index.html">home</a></li>
@@ -35,7 +35,7 @@
           <li class="line-hover-effect"><a href="#honduras-section">honduras</a></li>
         </ul>
       </nav>
-    </section>
+    </div>
   </header>
 
 
@@ -96,7 +96,6 @@
           Quibusdam cupiditate incidunt distinctio quos qui, minima aperiam, facere id porro provident, ex quasi libero
           dolorum a sunt explicabo! Nesciunt tempore quasi facere velit corrupti maxime itaque saepe veritatis et eius.
         </p>
-
         <!-- JAVASCRIPT FOR ASSIGNMENT 02 -->
         <div class="form">
           <h4>What are your top 3 favourite types of Mexican food?</h4>
@@ -108,8 +107,6 @@
           </ul>
         </div>
       </div>
-
-
       <figure class="eats-img-gallery bottom-stack-gallery">
         <img class="gallery-img-01" src="./assets/img/street-snack.jpg" alt="a bag of cucumber with chilli sauce">
         <img class="gallery-img-02" src="./assets/img/octopus-guac.jpg"
@@ -136,19 +133,17 @@
   <!-- THIS IS THE FOOTER -->
 
   <footer>
-    <section class="bottom-nav-wrapper">
+    <div class="bottom-nav-wrapper">
       <nav class="bottom-nav">
         <ul class="bottom-nav-list">
-          <li class="location-icon"><i class="fa-solid fa-location-dot"></i><a href="./mexico.html"></i>mexico</a></li>
+          <li class="location-icon"><i class="fa-solid fa-location-dot"></i><a href="./mexico.html">mexico</a></li>
           <li class="location-icon"><i class="fa-solid fa-location-dot"></i><a href="#">guatemala</a></li>
           <li class="location-icon"><i class="fa-solid fa-location-dot"></i><a href="#">honduras</a></li>
         </ul>
         <a class="line-hover-effect" href="#top-nav">back to top<i class="fa-solid fa-up-long"></i></a>
       </nav>
-    </section>
+    </div>
   </footer>
-
-
 </body>
 
 </html>
