--- a/sophie-collier_assessment01&02/index.html
+++ b/sophie-collier_assessment01&02/index.html
@@ -26,7 +26,7 @@
 
     <!-- THIS IS THE NAVIGATION  -->
 
-    <section>
+    <div>
       <nav class="top-nav" id="top-nav">
         <ul class="top-nav-list">
           <li class="line-hover-effect"><a href="#mexico-section">mexico</a></li>
@@ -34,7 +34,7 @@
           <li class="line-hover-effect"><a href="#honduras-section">honduras</a></li>
         </ul>
       </nav>
-    </section>
+    </div>
   </header>
 
   <main>
@@ -49,7 +49,9 @@
         <h2>mexico</h2>
         <p class="text-padding-left">Sunrise above the pyramids.</p>
         <p class="location-icon"><i class="fa-solid fa-location-dot"></i>Teotihuacán, México</p>
-        <button class="read-more-btn line-hover-effect"><a href="./mexico.html">read more</a></button>
+        <button class="read-more-btn line-hover-effect">
+          <a href="./mexico.html">read more</a>
+        </button>
       </div>
     </section>
 
@@ -78,7 +80,9 @@
         <h2>honduras</h2>
         <p class="text-padding-left">Diving tropical coral reefs.</p>
         <p class="location-icon"><i class="fa-solid fa-location-dot"></i>Utila, Honduras</p>
-        <button class="read-more-btn line-hover-effect"><a href="./mexico.html">read more</a></button>
+        <button class="read-more-btn line-hover-effect">
+          <a href="./mexico.html">read more</a>
+        </button>
       </div>
     </section>
   </main>
@@ -86,16 +90,16 @@
   <!-- FOOTER -->
 
   <footer>
-    <section class="bottom-nav-wrapper">
+    <div class="bottom-nav-wrapper">
       <nav class="bottom-nav">
         <ul class="bottom-nav-list">
-          <li class="location-icon"><i class="fa-solid fa-location-dot"></i><a href="./mexico.html"></i>mexico</a></li>
+          <li class="location-icon"><i class="fa-solid fa-location-dot"></i><a href="./mexico.html">mexico</a></li>
           <li class="location-icon"><i class="fa-solid fa-location-dot"></i><a href="#">guatemala</a></li>
           <li class="location-icon"><i class="fa-solid fa-location-dot"></i><a href="#">honduras</a></li>
         </ul>
         <a class="line-hover-effect" href="#top-nav">back to top<i class="fa-solid fa-up-long"></i></a>
       </nav>
-    </section>
+    </div>
   </footer>
 </body>
 
